--- a/finefin.backend/src/finefin.api/appsettings.json
+++ b/finefin.backend/src/finefin.api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=finefin;User Id=sa; Password=Abcd#1234; TrustServerCertificate=True"
+  }
 }
